--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,15 +1,21 @@
 name: CI
+
 on:
   push:
     branches: ['master']
   pull_request:
     branches: ['*']
+
 jobs:
   test:
-    runs-on: ubuntu-latest
     strategy:
       matrix:
+        os: [ubuntu, windows, macos]
         node-version: [15, 14]
+
+    runs-on: ${{ matrix.os }}-latest
+    name: ${{ matrix.os }} node@${{ matrix.node-version }}
+
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
