Support multiple child processes with same script name

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test": "npm run test:lint && npm run test:api && npm run test:cli",
     "test:lint": "standard",
     "test:api": "node test/api.js",
-    "test:cli": "test/cli.sh"
+    "test:cli": "node test/cli.js"
   },
   "repository": {
     "type": "git",
