--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "test": "test"
   },
   "dependencies": {
+    "chalk": "^4.1.0",
     "lockfile": "^1.0.4",
     "minimist": "^1.2.5",
-    "odiff": "^1.4.2"
+    "odiff": "^1.4.2",
+    "supports-color": "^8.1.1"
   },
   "devDependencies": {
     "standard": "^16.0.3",
